# compression-v2

./: .gitignore  Cargo.toml  README.md  cleanup.sh  example.txt  example.txt.decoded  example.txt.pkz  example.txt.pkzip  write_bytes.py  write_bytes.py.pkz
examples/: README.md  bible_source_code.html  example.txt  example.txt.pkz  random.stuff  small_example.txt
src/: main.rs  tests.rs  utils.rs
src/encoders/: bwt.rs  encoder.rs  huff.rs  huff_helper.rs  mod.rs  mtf.rs  rle.rs
