[package]
name = "compression-v2"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
colored = "2.1.0"
queue = "0.3.1"
radsort = "0.1.1"
sha256 = "1.5.0"
suffix_array = "0.5.0"

log = "0.4.21"
simple_logger = "5.0.0"
